--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: MacOS
 on:
   push:
     branches:
@@ -12,11 +12,11 @@ on:
     - README.md
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+  MacOS:
+    runs-on: macos-latest
     env:
-      FC: gfortran-9
-      CC: gcc-9
+      FC: gfortran-11
+      CC: gcc-11
     strategy:
       matrix:
         os: [macos-latest]
@@ -29,21 +29,9 @@ jobs:
 
     - name: install-dependencies
       run: |
-        if [[ ${{ matrix.os }} == "ubuntu-latest" ]]; then
-          sudo apt-get update
-          sudo apt-get install libmpich-dev
-          sudo apt-get install doxygen
-        elif [[ ${{ matrix.os }} == "macos-10.15" ]]; then
-          brew update
-          brew install doxygen
-          brew install mpich
-          if [[ ${{ matrix.compiler }} == "gcc-9" ]]; then
-            sudo ln -sf /usr/local/bin/gfortran-9 /usr/local/bin/gfortran
-          elif  [[ ${{ matrix.compiler }} == "gcc-10" ]]; then
-            sudo ln -sf /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
-          fi
-        fi
-        python3 -m pip install gcovr
+        brew update
+        brew install mpich
+        sudo ln -sf /usr/local/bin/gfortran-11 /usr/local/bin/gfortran
 
     - name: cache-netcdf
       id: cache-netcdf
