--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -17,6 +17,11 @@ jobs:
     env:
       FC: gfortran-11
       CC: gcc-11
+    strategy:
+      matrix:
+        os: [macos-latest]
+        netcdf_version: [4.7.4]
+        compiler: [gcc-9]      
 
     steps:
 
@@ -33,7 +38,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/netcdf
-        key: MacOS-netcdf-c-4.7.4-${{ runner.os }}
+        key: netcdf-c-${{ matrix.netcdf_version }}-${{ runner.os }}1
 
     - name: build-hdf5
       if: steps.cache-netcdf.outputs.cache-hit != 'true'
@@ -42,7 +47,7 @@ jobs:
         wget https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.10/hdf5-1.10.7/src/hdf5-1.10.7.tar.gz &> /dev/null
         tar -xzf hdf5-1.10.7.tar.gz
         pushd hdf5-1.10.7
-        ./configure --prefix=${HOME}/netcdf --enable-parallel --disable-tools --disable-fortran --disable-cxx
+        ./configure --prefix=${HOME}/netcdf --enable-parallel --disable-tools --disable-fortran --disable-cxx --enable-parallel-tests
         make -j2
         make install
            
@@ -52,9 +57,9 @@ jobs:
         export CC=mpicc
         export CPPFLAGS=-I${HOME}/netcdf/include
         export LDFLAGS=-L${HOME}/netcdf/lib
-        wget https://github.com/Unidata/netcdf-c/archive/refs/tags/v4.7.4.tar.gz
-        tar -xzf v4.7.4.tar.gz
-        cd netcdf-c-4.7.4
+        wget https://github.com/Unidata/netcdf-c/archive/refs/tags/v${{ matrix.netcdf_version }}.tar.gz
+        tar -xzf v${{ matrix.netcdf_version }}.tar.gz
+        cd netcdf-c-${{ matrix.netcdf_version }}
         ./configure --prefix=${HOME}/netcdf --disable-dap --disable-utilities
         make -j2
         make install
@@ -79,7 +84,12 @@ jobs:
         export FC=mpifort
         export CC=mpicc
         mkdir build && cd build
-        cmake -DCMAKE_PREFIX_PATH='~;~/netcdf' ..
+        cmake .. -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH='~;~/netcdf' -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0"
         make -j2
         ctest --output-on-failure
-
+        gcovr -v --html-details -o test-coverage.html
+    
+    - uses: actions/upload-artifact@v2
+      with:
+        name: test-coverage
+        path: NCEPLIBS-ncio/build/*.html
