--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -80,12 +80,14 @@ jobs:
         export FC=mpifort
         export CC=mpicc
         mkdir build && cd build
-        cmake .. -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH='~;~/netcdf' -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0 -fsanitize=address"
+        cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH='~;~/netcdf' -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0 -fsanitize=address" ..
         make -j2 VERBOSE=1
         ctest --output-on-failure
-        gcovr -v --html-details -o test-coverage.html
+        gcovr --root .. -v  --html-details --exclude ../tests --exclude CMakeFiles --print-summary -o test-coverage.html
     
     - uses: actions/upload-artifact@v2
       with:
         name: test-coverage
-        path: NCEPLIBS-ncio/build/*.html
+        path: |
+          NCEPLIBS-ncio/build/*.html
+          NCEPLIBS-ncio/build/*.css
